[gd_scene load_steps=5 format=3 uid="uid://c1pr6sqjviypy"]

[ext_resource type="Texture2D" uid="uid://dludhoqvspkw7" path="res://art/ui/build_button.png" id="1_e1257"]
[ext_resource type="Script" path="res://scenes/ui/action_button.gd" id="2_hx2xh"]
[ext_resource type="Texture2D" uid="uid://b27783dxsa2ml" path="res://art/ui/build_button_glow.png" id="3_hmfr7"]

[sub_resource type="LabelSettings" id="LabelSettings_yswvr"]
font_size = 31
font_color = Color(1, 1, 0, 1)
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[node name="ActionButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(80, 80)
texture_normal = ExtResource("1_e1257")
script = ExtResource("2_hx2xh")

[node name="BuildingTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="GlowTexture" type="TextureRect" parent="."]
visible = false
modulate = Color(0.801464, 0.303711, 0.743207, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hmfr7")

[node name="Count" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_right = 38.0
offset_bottom = 44.0
grow_horizontal = 0
text = "0"
label_settings = SubResource("LabelSettings_yswvr")
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
